# HomeKey-ESP32

./: .gitignore  .gitmodules  partitions.csv  sdkconfig.defaults
components/HK-HomeKit-Lib/include/: HK_HomeKit.h  hkAuthContext.h
components/HK-HomeKit-Lib/src/: HK_HomeKit.cpp
components/HK-HomeKit-Lib/src/auth/: hkAuthContext.cpp
components/Zigbee/: CMakeLists.txt
components/Zigbee/src/: Zigbee.h  ZigbeeEP.h  ZigbeeHandlers.cpp
components/Zigbee/src/ep/: ZigbeeColorDimmableLight.cpp  ZigbeeDoorLock.cpp  ZigbeeDoorLock.h
main/: CMakeLists.txt  idf_component.yml  main-generator.h  main.cpp
main/include/: helper.h  homespan_device.h  keys.h  tasker.h  tasks.h  zigbee_device.h
